corrected the margin for the filtered product section to go beyond the expand/collapse button

--- a/css/styles.css
+++ b/css/styles.css
@@ -2754,6 +2754,9 @@ a:hover, a:focus{
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - end style expand collapse button for filters - - */
 /* - - begin filtered-product-section - - */
+.filtered-product-section.brilliant-cut{
+    margin-top: -30px;
+}
 .filtered-product-section.byo{
     margin-top: -28px;
 }
